--- a/1.Multi-Query-Retriever.ipynb
+++ b/1.Multi-Query-Retriever.ipynb
@@ -95,6 +95,7 @@
     "retriever_from_llm = MultiQueryRetriever.from_llm(\n",
     "    retriever=vectordb.as_retriever(),\n",
     "    llm = llm\n",
+    "    #prompt = QUERY_PROMPT | 넣어줄 수 있음\n",
     ")"
    ]
   },
